GasStationProject/force-app/main/default/objects/Buyer__c/Buyer__c.object-meta.xml
<CustomObject>
    <label>Buyer</label>
    <nameField>
        <displayFormat>Buyer-{000}</displayFormat>
        <label>Buyer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>