GasStationProject/force-app/main/default/objects/Buyer__c/fields/Fuel_filled_in_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Fuel_filled_in_vehicle__c</fullName>
    <label>Fuel filled in vehicle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>