GasStationProject/force-app/main/default/objects/Buyer__c/fields/Fuel_price_liter__c.field-meta.xml
<CustomField>
    <fullName>Fuel_price_liter__c</fullName>
    <label>Fuel price liter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>