GasStationProject/force-app/main/default/objects/Buyer__c/fields/Gas_Station_name__c.field-meta.xml
<CustomField>
    <fullName>Gas_Station_name__c</fullName>
    <label>Gas Station name</label>
    <referenceTo>Gas_Station__c</referenceTo>
    <relationshipLabel>Buyers</relationshipLabel>
    <relationshipName>Buyers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>