GasStationProject/force-app/main/default/objects/Buyer__c/fields/Mode_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_payment__c</fullName>
    <label>Mode of payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>credit card,</fullName>
            </value>
            <value>
                <fullName>debit card,</fullName>
            </value>
            <value>
                <fullName>net banking,</fullName>
            </value>
            <value>
                <fullName>upi,</fullName>
            </value>
            <value>
                <fullName>cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>