GasStationProject/force-app/main/default/objects/Buyer__c/fields/Vehicle_type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_type__c</fullName>
    <label>Vehicle type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>two wheeler,</fullName>
            </value>
            <value>
                <fullName>three wheeler,</fullName>
            </value>
            <value>
                <fullName>four wheeler,</fullName>
            </value>
            <value>
                <fullName>six wheeler,</fullName>
            </value>
            <value>
                <fullName>eight wheeler,</fullName>
            </value>
            <value>
                <fullName>Others.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>