GasStationProject/force-app/main/default/objects/Buyer__c/validationRules/Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Phone_Number__c , &quot;[6-9]{1}[0-9]{9}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>incorrect data</errorMessage>
</ValidationRule>